feat: Migrate from SVG to Material Symbols (ICONOS RUTAS) icons  and add color styling for them (INCORPORADA CLASE CSS PARA COLORES DIFICULTAD RUTAS).

--- a/estilo/base.css
+++ b/estilo/base.css
@@ -181,6 +181,18 @@ main {
     -webkit-font-smoothing: antialiased;
 }
 
+.card-meta .material-symbols-outlined.green {
+    color: green;
+}
+
+.card-meta .orange.material-symbols-outlined {
+    color: orange;
+}
+
+.card-meta .material-symbols-outlined.red {
+    color: red;
+}
+
 h1,
 h2,
 h3,
