--- a/estilo/footer.css
+++ b/estilo/footer.css
@@ -79,7 +79,7 @@
 .social-icon svg {
     width: 20px;
     height: 20px;
-    fill: currentColor;
+    /* fill: currentColor; */
 }
 
 .social-icon:hover {
