--- a/estilo/header.css
+++ b/estilo/header.css
@@ -436,8 +436,7 @@
 
     /* Al usar display:none, el navegador elimina el logo y widgets del orden de Tab */
     body:has(.menu-logic-check:checked) .weather-widget,
-    body:has(.menu-logic-check:checked) .lang-dropdown,
-    body:has(.menu-logic-check:checked) .visually-hidden:not(.mobile-menu *) {
+    body:has(.menu-logic-check:checked) .lang-dropdown {
         display: none !important;
     }
 }
