--- a/estilo/base.css
+++ b/estilo/base.css
@@ -148,7 +148,7 @@ main {
     font-family: 'Harabara-Bold';
     font-style: normal;
     font-weight: 800;
-    src: local('Harabara-Bold'), url(/fuentes/Harabara-Bold.woff) format('woff');
+    src: local('Harabara-Bold'), url(../fuentes/Harabara-Bold.woff) format('woff');
     /* unicode-range: U + 0000-00FF, U + 0131, U + 0152-0153, U + 02C6, U + 02DA, U + 02DC, U + 2000-206F, U + 2074, U + 20AC, U + 2212, U + 2215; */
     font-display: swap;
 }
@@ -159,7 +159,7 @@ main {
     font-style: normal;
     font-weight: 400;
     font-display: block;
-    src: url(/fuentes/Material-Symbols-Outlined.woff) format('woff');
+    src: url(../fuentes/Material-Symbols-Outlined.woff) format('woff');
 }
 
 .material-symbols-outlined {
